--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,12 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: I Kadek Adi Gunawan
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
-
+description: Web, Android, UI & UX from Bali, Indonesia
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/11344981?v=3&s=466
 
 #
 # Flags below are optional
@@ -21,7 +20,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: zgunz42
   instagram:
   linkedin:
   pinterest:
