--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: I Kadek Adi Gunawan
 
 # Short bio or description (displayed in the header)
-description: Web, Android, UI & UX from Bali, Indonesia
+description: Web Dev, Android, UI & UX from Bali, Indonesia
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/11344981?v=3&s=466
 
@@ -16,16 +16,16 @@ avatar: https://avatars1.githubusercontent.com/u/11344981?v=3&s=466
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email:
-  facebook:
+  dribbble: zgunz42
+  email: adi_gunawan@live.com
+  facebook: adhi.spirit
   flickr:
   github: zgunz42
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: adi_gun_gun
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -33,14 +33,14 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: zgunz42
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-85188718-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://zgunz42.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
